added notebook with more theory

--- a/notebooks/Q-Learning.ipynb
+++ b/notebooks/Q-Learning.ipynb
@@ -26,19 +26,20 @@
     }
    ],
    "source": [
-    "env = gym.make('FrozenLake-v0')"
+    "env = gym.make('FrozenLake-v0')\n",
+    "# env = gym.make('')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "#Initialize table with all zeros\n",
-    "Q = np.zeros([env.observation_space.n,env.action_space.n])\n",
+    "Q = np.zeros([ env.observation_space.n, env.action_space.n])\n",
     "# Set learning parameters\n",
     "lr = .85\n",
     "y = .99\n",
@@ -52,7 +53,7 @@
     "    rAll = 0\n",
     "    d = False\n",
     "    j = 0\n",
-    "    #The Q-Table learning algorithm\n",
+    "    # The Q-Table learning algorithm\n",
     "    while j < 99:\n",
     "        j+=1\n",
     "        \n",
