--- a/notebooks/20170427 Predictive Analytics Frankfurt.ipynb
+++ b/notebooks/20170427 Predictive Analytics Frankfurt.ipynb
@@ -13,6 +13,38 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Walter Freyn\n",
+    "\n",
+    "\n",
+    "Miguel Vaz"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Option"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "#### Delta hedging"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
