--- a/notebooks/Q-Learning.ipynb
+++ b/notebooks/Q-Learning.ipynb
@@ -2,6 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {
     "collapsed": true
@@ -28,6 +40,28 @@
    "source": [
     "env = gym.make('FrozenLake-v0')\n",
     "# env = gym.make('')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Q-Learning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Initialize $V(s)$ arbitrarily\n",
+    "- Repeat for each episode\n",
+    "- Initialize s\n",
+    "- Repeat (for each step of episode)\n",
+    "- -    $\\alpha \\leftarrow$ action given by $\\pi$ for $s$\n",
+    "- - Take action a, observe reward r, and next state s'\n",
+    "- - $V(s) \\leftarrow V(s) + \\alpha [r = \\gamma V(s') - V(s)]$ \n",
+    "- - $s \\leftarrow s'$\n",
+    "- until $s$ is terminal"
    ]
   },
   {
@@ -123,6 +157,229 @@
    ],
    "source": [
     "print(\"Score over time: \" +  str(sum(rList)/num_episodes))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/miguel/Jottacloud/HedgingRL\n"
+     ]
+    }
+   ],
+   "source": [
+    "cd .."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gym\n",
+    "import gym.envs\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import gym_bs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "gym.spaces.Tuple?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[2017-04-25 17:59:30,515] Making new env: bs-v0\n"
+     ]
+    }
+   ],
+   "source": [
+    "env = gym.make('bs-v0')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Tuple(Box(1,), Box(1,), Box(1,))"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "env.observation_space\n",
+    "# env.action_space.contains(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "True if 2>=3 else False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "env.action_space.sample()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([ 4.43761995]), array([ 0.49800923]), array([-98.87277771]))"
+      ]
+     },
+     "execution_count": 162,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "env.observation_space.sample()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Q = np.zeros([ env.observation_space.n, env.action_space.n])\n",
+    "# Set learning parameters\n",
+    "lr = .85\n",
+    "y = .99\n",
+    "num_episodes = 2000\n",
+    "#create lists to contain total rewards and steps per episode\n",
+    "#jList = []\n",
+    "rList = []\n",
+    "for i in range(num_episodes):\n",
+    "    #Reset environment and get first new observation\n",
+    "    s = env.reset()\n",
+    "    \n",
+    "    done = False\n",
+    "    while not done:\n",
+    "        a = env.action_space.sample()\n",
+    "        s1, r, done, _ = env.step(a)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/miguel/Jottacloud/HedgingRL/blackscholes/mathfin.py:40: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  d1 = np.log(S / K) / sigma / sqrt_tau + 0.5 * sigma_sqrt_tau\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'delta': nan, 'gamma': nan, 'npv': 0.0, 'theta': nan, 'vega': nan}"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from blackscholes import blackScholes\n",
+    "blackScholes(0, 1, 1, 0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'K' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-151-a5dd913a5926>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mK\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'K' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "K "
    ]
   }
  ],
